test 3 push js src fix

--- a/index.html
+++ b/index.html
@@ -24,6 +24,5 @@
 <h3 id="model-name"></h3>
 <div id="viewport" style="width:600px; height:400px;"></div>
   <script src="https://unpkg.com/ngl@2.0.0-dev.40/dist/ngl.js"></script>
-</body>
-  <script src="proteinSlideshow.js"></script>
+  <script src="./proteinSlideshow.js"></script></body>
 </html>
