--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h3 id="model-name"></h3>
 <div id="viewport" style="width:600px; height:400px;"></div>
   <script src="https://unpkg.com/ngl@2.0.0-dev.40/dist/ngl.js"></script>
-  <script src="proteinSlideshow.js"></script>
+  <script src="proteinslideshow.js"></script>
   </body>
   <!-- v4 -->
 </html>
