--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
     .toolbar-group {
       display: flex;
       align-items: center;
-      gap: 8px;
-      background: var(--toolbar-bg);
-      border-radius: 999px;
-      padding: 6px 12px;
-      border: 1px solid rgba(148, 163, 184, 0.16);
+      gap: 6px;
+      background: rgba(12, 18, 32, 0.85);
+      border-radius: 8px;
+      padding: 6px 10px;
+      border: 1px solid rgba(71, 85, 105, 0.45);
     }
 
     .toolbar-search {
@@ -173,39 +173,38 @@
     }
 
     button {
-      background: var(--button-bg);
-      border: 1px solid var(--button-border);
+      background: rgba(30, 41, 59, 0.6);
+      border: 1px solid rgba(148, 163, 184, 0.35);
       color: var(--text-primary);
-      padding: 10px 18px;
-      border-radius: 999px;
-      font-size: 15px;
-      letter-spacing: 0.02em;
+      padding: 7px 14px;
+      border-radius: 6px;
+      font-size: 13px;
+      letter-spacing: 0.015em;
       cursor: pointer;
-      transition: transform 150ms ease, background 150ms ease, border 150ms ease;
+      transition: background 120ms ease, border 120ms ease, color 120ms ease;
     }
 
     button:hover,
     button:focus-visible {
-      background: var(--toggle-active);
-      border-color: var(--toggle-border);
-      transform: translateY(-1px);
+      background: rgba(56, 189, 248, 0.18);
+      border-color: rgba(56, 189, 248, 0.45);
       outline: none;
     }
 
     button:active {
-      transform: translateY(0);
+      background: rgba(56, 189, 248, 0.26);
     }
 
     .toggle {
-      padding: 8px 16px;
-      font-size: 14px;
-      background: transparent;
-      border-color: transparent;
+      padding: 6px 12px;
+      font-size: 12px;
+      background: rgba(15, 23, 42, 0.35);
+      border-color: rgba(148, 163, 184, 0.3);
     }
 
     .toggle.is-active {
-      background: var(--toggle-active);
-      border-color: var(--toggle-border);
+      background: rgba(14, 165, 233, 0.18);
+      border-color: rgba(56, 189, 248, 0.6);
       color: var(--text-primary);
     }
 
@@ -369,16 +368,17 @@
       color: var(--text-secondary);
     }
 
+
     .analysis-list {
       display: flex;
       flex-direction: column;
-      gap: 6px;
-      max-height: 200px;
+      gap: 4px;
+      max-height: 210px;
       overflow-y: auto;
-      padding: 10px;
-      background: rgba(15, 23, 42, 0.6);
-      border: 1px solid rgba(148, 163, 184, 0.2);
-      border-radius: 12px;
+      padding: 8px;
+      background: rgba(10, 16, 26, 0.9);
+      border: 1px solid rgba(71, 85, 105, 0.5);
+      border-radius: 8px;
       list-style: none;
       margin: 0;
     }
@@ -386,11 +386,12 @@
     .analysis-item {
       display: flex;
       align-items: center;
-      gap: 8px;
-      font-size: 13px;
-      padding: 4px 6px;
-      border-radius: 8px;
-      transition: background 120ms ease;
+      gap: 6px;
+      font-size: 12px;
+      padding: 3px 6px;
+      border-radius: 6px;
+      border: 1px solid transparent;
+      transition: background 100ms ease, border 100ms ease, color 100ms ease;
       position: relative;
     }
 
@@ -399,15 +400,64 @@
     }
 
     .analysis-item.is-selected {
-      background: rgba(56, 189, 248, 0.18);
+      background: rgba(14, 165, 233, 0.18);
+      border-color: rgba(14, 165, 233, 0.55);
       color: var(--accent);
       font-weight: 600;
     }
 
+    .analysis-divider {
+      text-align: center;
+      font-size: 11px;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      color: rgba(148, 163, 184, 0.55);
+      padding: 6px 0 2px;
+    }
+
+    .analysis-item.in-proximity:not(.is-selected) {
+      background: rgba(59, 130, 246, 0.12);
+      border-color: rgba(59, 130, 246, 0.28);
+      color: #bfdbfe;
+    }
+
+    .analysis-item.in-proximity:not(.is-selected) .analysis-item-label span {
+      color: #dbeafe;
+    }
+
+    .analysis-item.in-proximity:not(.is-selected)::after {
+      content: "In proximity";
+      margin-left: auto;
+      font-size: 10px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: rgba(226, 232, 240, 0.65);
+    }
+
+    .analysis-item.has-interaction:not(.is-selected) {
+      background: rgba(34, 197, 94, 0.2);
+      border-color: rgba(34, 197, 94, 0.45);
+      color: #bbf7d0;
+    }
+
+    .analysis-item.has-interaction:not(.is-selected) .analysis-item-label span {
+      color: #dcfce7;
+    }
+
+    .analysis-item.has-interaction:not(.is-selected)::after {
+      content: "Interaction available";
+      margin-left: auto;
+      font-size: 10px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: rgba(187, 247, 208, 0.8);
+    }
+
     .muted {
-      opacity: 0.5;
+      opacity: 0.45;
       cursor: not-allowed;
-      background: rgba(15, 23, 42, 0.25);
+      background: rgba(15, 23, 42, 0.18);
+      border-color: rgba(71, 85, 105, 0.35);
     }
 
     .analysis-actions {
@@ -495,6 +545,30 @@
       min-width: 88px;
       padding: 6px 12px;
       font-size: 12px;
+    }
+
+    .analysis-threshold {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+      margin: 6px 0 4px;
+    }
+
+    .analysis-threshold label {
+      display: flex;
+      justify-content: space-between;
+      font-size: 12px;
+      color: var(--text-secondary);
+    }
+
+    .analysis-threshold input[type="range"] {
+      width: 100%;
+      accent-color: var(--accent);
+    }
+
+    .analysis-threshold-value {
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
     .analysis-actions .analyze-button:disabled {
@@ -654,6 +728,10 @@
               <input id="residue-jump-input" type="text" placeholder="ALA A265" autocomplete="off" />
               <button id="residue-jump-button" type="button">Load</button>
             </div>
+          </div>
+          <div class="analysis-threshold">
+            <label for="proximity-threshold">Proximity threshold <span class="analysis-threshold-value" id="proximity-value">5Å</span></label>
+            <input id="proximity-threshold" type="range" min="1" max="5" step="0.1" value="5" />
           </div>
           <div class="analysis-select">
             <span>Select 2–10 residues to compare:</span>
