--- a/index.html
+++ b/index.html
@@ -664,6 +664,29 @@
       .analysis-panel {
         max-height: none;
       }
+
+      /* Make structure thumbnails tidy: fixed box, centered, preserve aspect ratio */
+      .metadata-figure {
+        width: 100%;
+        max-width: 220px;
+        margin: 0.5rem auto;
+        display: block;
+        background: #fafafa;
+        border: 1px solid #e6e6e6;
+        padding: 6px;
+        box-sizing: border-box;
+        border-radius: 6px;
+      }
+
+      .metadata-figure img {
+        display: block;
+        width: 100%;
+        height: 140px; /* fixed visual height for thumbnails */
+        object-fit: contain; /* preserve aspect ratio and avoid cropping */
+        object-position: center center;
+        border-radius: 4px;
+        background: #fff;
+      }
     }
   </style>
 </head>
