--- a/index.html
+++ b/index.html
@@ -252,20 +252,28 @@
     }
 
     .metadata-figure {
-      margin: 0;
+      margin: 0 auto;
       border-radius: clamp(8px, 1.8vw, 14px);
       overflow: hidden;
       position: relative;
       border: 1px solid rgba(148, 163, 184, 0.2);
       background: radial-gradient(circle at 25% 20%, rgba(56, 189, 248, 0.12), rgba(15, 23, 42, 0.85));
+      width: 100%;
+      max-width: 280px;
+      min-height: 120px;
+      max-height: 320px;
       aspect-ratio: 4 / 3;
+      display: block;
+      box-sizing: border-box;
     }
 
     .metadata-figure img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain; /* preserve aspect ratio, avoid cropping or stretching */
+      object-position: center center;
       display: block;
+      background: #fff;
     }
 
     .metadata-grid {
@@ -665,27 +673,9 @@
         max-height: none;
       }
 
-      /* Make structure thumbnails tidy: fixed box, centered, preserve aspect ratio */
+      /* mobile: let the primary metadata-figure rules govern sizing; ensure flexibility */
       .metadata-figure {
-        width: 100%;
-        max-width: 220px;
-        margin: 0.5rem auto;
-        display: block;
-        background: #fafafa;
-        border: 1px solid #e6e6e6;
-        padding: 6px;
-        box-sizing: border-box;
-        border-radius: 6px;
-      }
-
-      .metadata-figure img {
-        display: block;
-        width: 100%;
-        height: 140px; /* fixed visual height for thumbnails */
-        object-fit: contain; /* preserve aspect ratio and avoid cropping */
-        object-position: center center;
-        border-radius: 4px;
-        background: #fff;
+        max-width: 240px;
       }
     }
   </style>
