chore(share-assets): add generated OG preview image and SOCIAL.md

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Protein Side-chain Interaction Explorer</title>
+  <!-- Open Graph / Social Preview -->
+  <meta property="og:title" content="Protein Side-chain Interaction Explorer" />
+  <meta property="og:description" content="Explore residue proximity and predicted side‑chain contacts from PDB structures in your browser." />
+  <meta property="og:image" content="/share-assets/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Protein Side-chain Interaction Explorer" />
+  <meta name="twitter:description" content="Explore residue proximity and predicted side‑chain contacts from PDB structures in your browser." />
+  <meta name="twitter:image" content="/share-assets/og-image.png" />
   <link rel="icon" href="favicon.png">
   <style>
     :root {
