--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <!-- Open Graph / Social Preview -->
   <meta property="og:title" content="Protein Side-chain Interaction Explorer" />
   <meta property="og:description" content="Explore residue proximity and predicted side‑chain contacts from PDB structures in your browser." />
-  <meta property="og:image" content="/share-assets/og-image.png" />
+  <meta property="og:image" content="https://cfiorelli.github.io/proteinslideshow/share-assets/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Protein Side-chain Interaction Explorer" />
   <meta name="twitter:description" content="Explore residue proximity and predicted side‑chain contacts from PDB structures in your browser." />
-  <meta name="twitter:image" content="/share-assets/og-image.png" />
+  <meta name="twitter:image" content="https://cfiorelli.github.io/proteinslideshow/share-assets/og-image.png" />
   <link rel="icon" href="favicon.png">
   <style>
     :root {
